revert to using bearing offsets intstead of guess factors in enemyFireAngle prediction refactoring, cleanup & optimization remove sorting entries by distance in FireLogEntry.getSimilarEntries my movement simulation added WaveSurfing tweaks & bugfixes enemy preferred distance detecting added enemy gun type detecting improved